chore: fixing node level spacing

--- a/src/Command/Components/PassPlan/PassPlan.css
+++ b/src/Command/Components/PassPlan/PassPlan.css
@@ -46,7 +46,7 @@ rux-select.pass-plan_header-select::part(label) {
 }
 
 .pass-plan_header-instruction {
-  padding-inline-start: var(--spacing-20);
+  padding-inline-start: var(--spacing-16);
 }
 
 /* Content/Body Styles */
@@ -73,7 +73,7 @@ rux-tree.pass-plan_tree-wrapper {
 }
 
 rux-tree.pass-plan_tree-wrapper rux-tree-node::part(text) {
-  padding-inline-start: var(--spacing-8);
+  padding-inline-start: var(--spacing-6);
   width: 100%;
   padding-block: var(--spacing-1);
 }
@@ -90,6 +90,10 @@ rux-tree.pass-plan_tree-wrapper rux-tree-node::part(text) {
 
 .pass-plan_tree-content-wrapper > rux-progress {
   margin-inline-start: auto;
+}
+
+rux-tree-node[aria-level="2"]::part(node) {
+  padding-left: var(--spacing-20);
 }
 
 /* List Item Styles */
